--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
 // Server .babelrc is in ./src/server directory.
 // https://github.com/facebook/react-native/tree/master/babel-preset
 {
-  "presets": ["react-native"],
+  "presets": ["react-native","react-native-stage-0/decorator-support"],
   "plugins": [
     "transform-decorators-legacy",
     "transform-react-constant-elements",
