--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-native": "^1.9.0",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "babel-preset-stage-1": "^6.3.13",
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
@@ -89,6 +90,7 @@
     "gulp-shell": "^0.5.2",
     "gulp-util": "^3.0.7",
     "hash-file": "^3.0.0",
+    "history": "^1.12.3",
     "iflow-react-intl": "^1.2.0",
     "inline-style-prefixer": "^2.0.5",
     "intl": "^1.0.0",
@@ -104,18 +106,19 @@
     "loopback-connector-mysql": "~2.2.0",
     "loopback-datasource-juggler": "~2.40.1",
     "make-error": "^1.0.4",
-    "material-ui": "^0.17.0",
+    "material-ui": "^0.16.7",
     "nconf": "^0.8.1",
+    "node-sass": "^4.5.2",
     "nodemon": "^1.8.1",
     "nyan-progress-webpack-plugin": "^1.1.4",
     "postcss-loader": "^1.1.0",
     "ramda": "^0.23.0",
     "raven-js": "^3.0.3",
-    "react": "^15.4.1",
+    "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-addons-test-utils": "^15.4.1",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.1",
+    "react-dom": "^15.4.2",
     "react-fela": "^4.0.1",
     "react-helmet": "^4.0.0",
     "react-hotkeys": "^0.9.0",
@@ -127,8 +130,10 @@
     "react-native-uuid": "^1.4.8",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.1",
-    "react-router": "4.0.0-alpha.6",
+    "react-router": "^3.0.5",
+    "react-router-proxy-loader": "~0.4.0",
     "react-select": "^1.0.0-rc.3",
+    "react-tap-event-plugin": "^2.0.0",
     "redbox-react": "^1.0.5",
     "redux": "^3.0.4",
     "redux-form": "^6.5.0",
@@ -136,6 +141,7 @@
     "redux-observable": "^0.13.0",
     "redux-persist": "^4.0.1",
     "redux-promise-middleware": "^4.2.0",
+    "redux-storage": "^1.3.1",
     "regenerator": "^0.9.5",
     "regenerator-runtime": "^0.10.0",
     "require-dir": "^0.3.0",
@@ -151,7 +157,7 @@
     "url-loader": "^0.5.5",
     "uuid": "^3.0.0",
     "validator": "^6.0.0",
-    "webpack": "^2.2.0",
+    "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.15.0",
     "webpack-isomorphic-tools": "^2.6.5",
@@ -219,13 +225,13 @@
     "loopback-datasource-juggler": "~2.40.1",
     "loopback-webpack-plugin": "~0.1.2",
     "marked": "~0.3.5",
-    "material-ui": "~0.13.4",
+    "material-ui": "^0.16.4",
     "mysql": "~2.9.0",
     "nconf": "~0.7.1",
     "node-sass": "~3.1.2",
     "normalize.css": "~3.0.2",
     "postcss-loader": "~0.7.0",
-    "react": "~0.14.1",
+    "react": "~15.5.4",
     "react-addons-clone-with-props": "~0.14.0",
     "react-addons-create-fragment": "~0.14.0-rc1",
     "react-addons-css-transition-group": "~0.14.0-rc1",
@@ -243,10 +249,10 @@
     "react-intl": "2.0.0-pr-3",
     "react-pure-render": "~1.0.1",
     "react-redux": "~3.0.1",
-    "react-router": "~1.0.0-rc1",
+    "react-router": "~1.0.3",
     "react-router-proxy-loader": "~0.4.0",
     "react-select": "~0.7.0",
-    "react-tap-event-plugin": "~0.2.1",
+    "react-tap-event-plugin": "~2.0.0",
     "react-textarea-autosize": "~2.3.1",
     "react-transform-catch-errors": "~0.2.0",
     "react-transform-hmr": "~0.1.6",
@@ -312,7 +318,12 @@
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-preset-stage-0": "^6.24.1",
     "gulp-mocha": "^3.0.1",
-    "loopback-webpack-plugin": "^0.1.2"
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "loopback-webpack-plugin": "^0.1.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1"
   }
 }
